[tool.poetry]
name = "tagsync"
version = "0.1.1"
description = ""
authors = ["Sergei Dyshel <sergei@dyshel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pywin32 = {version = "306", platform = "win32"}
typer = "^0.6.1"
eyed3 = "^0.9.6"
click = "^8.1.3"
tqdm = "^4.64.1"
colorlog = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
